# AI-Rezume-Analyzer

./: .dockerignore  .gitattributes  .gitignore  README.md  docker-compose.yml  railway.json  render.yaml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_resume_parsed_data.py  0003_analysis_scores.py  0004_job_matches.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: admin.py  analysis.py  auth.py  job_match.py  resumes.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  analysis.py  base.py  job_match.py  resume.py  user.py
backend/app/schemas/: admin.py  analysis.py  auth.py  common.py  job_match.py  resume.py
backend/app/services/: admin_service.py  ai_service.py  analysis_service.py  ats_service.py  auth_service.py  job_match_service.py  parser.py  resume_service.py  storage.py
backend/tests/: _helpers.py  conftest.py  test_admin_endpoint.py  test_ai.py  test_analysis_endpoint.py  test_ats.py  test_health.py  test_job_match.py  test_job_match_endpoint.py  test_parser.py  test_resume_endpoint.py  test_resume_service.py  test_storage.py
docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
docs/: DEPLOYMENT.md  DEVELOPMENT.md
frontend/: .dockerignore  .env.example  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Navbar.tsx  (+2 more)
(+19 files in other folders)
